# constitution-of-india

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-TEXT  README.md  preamble.md  pyproject.toml
articles/: article-001.md  article-002.md  article-002A.md  article-003.md  article-004.md  article-005.md  article-006.md  article-007.md  article-008.md  article-009.md  article-010.md  article-011.md  article-012.md  article-013.md  article-014.md  article-015.md  article-016.md  article-017.md  article-018.md  article-019.md  article-020.md  article-021.md  article-022.md  article-023.md  article-024.md  article-025.md  article-026.md  article-027.md  article-028.md  article-029.md  article-030.md  article-031.md  article-031A.md  article-031B.md  article-031C.md  article-031D.md  article-032.md  article-032A.md  article-033.md  article-034.md  (+396 more)
docs/: handoff-phase2.md  handoff.md  prd-constitution-v1.md  research-notes.md
metadata/: amendments.json  cross-references.json  provenance.json
parts/: part-i.md  part-ii.md  part-iii.md  part-iv.md  part-iva.md  part-ix.md  part-v.md  part-vi.md  part-vii.md  part-viii.md  part-x.md  part-xi.md  part-xii.md  part-xiii.md  part-xiv.md  part-xiva.md  part-xix.md  part-xv.md  part-xvi.md  part-xvii.md  part-xviii.md  part-xx.md  part-xxi.md  part-xxii.md
pipeline/: README.md
pipeline/cli/: main.py
pipeline/extract/: clpr.py  clpr_consolidated.py  ik.py  (+3 more)
schedules/: schedule-01.md  schedule-02.md  schedule-03.md  schedule-04.md  schedule-05.md  schedule-06.md  schedule-07.md  schedule-08.md  schedule-09.md  schedule-10.md
(+25 files in other folders)
