[project]
name = "indian-law-git-pipeline"
version = "0.0.1"
description = "Pipeline for ingesting Government of India PDFs into the Constitution of India Git repo."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Akash Kamble" },
]
dependencies = [
    "pdfplumber>=0.11",
    "pdfminer.six>=20240706",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
indlaw = "pipeline.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["pipeline"]
python_files = ["test_*.py", "*_test.py"]
